# JME

./: README.md  pyproject.toml
jme/: dataset.py  jme.py  logger.py  metrics.py  parser.py  test.py  train.py  utils.py
jme/kge/: compl_ex.py  conv_e.py  dist_mult.py  kg2e.py  trans_e.py
