[tool.poetry]
name = "JME"
version = "1.0.0"
description = ""
authors = ["Yosuke Saito"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
torch = {url = "https://download.pytorch.org/whl/cu111/torch-1.9.0%2Bcu111-cp39-cp39-linux_x86_64.whl"}
numpy = "1.19.5"
scipy = "^1.7.1"
pandas = "^1.3.1"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
